--- a/html-assignment/lifeInAntraButtons.html
+++ b/html-assignment/lifeInAntraButtons.html
@@ -16,22 +16,22 @@
             <td  colspan=2 align="right"><a href="https://github.com/"><input type="button" name="Github" value="Github"></a></td>
         </tr>
         <tr style="height:100px">
-            <td align="center" valign="top">FB</td>
-            <td align="left">GMail</td>
-            <td align="right" valign = "bottom">YouTube</td>
-            <td align="left">2048</td>
+            <td align="center" valign="top"><a href="https://www.facebook.com/"><input type="button" name="FB" value="FB"></a></td>
+            <td align="left"><input type="button" name="GMail" value="GMail"></td>
+            <td align="right" valign = "bottom"><a href="https://www.youtube.com/"><input type="button" name="youtube" value="Youtube"></a></td>
+            <td align="left"><input type="button" name="2048" value="2048"></td>
         </tr>
         <tr style="height:50px">
-            <td rowspan=2 align="right" valign="bottom">Food</td>
-            <td rowspan=2 colspan =2 align="left" valign = "bottom">Game</td>
-            <td  align="center">Social Life</td>
+            <td rowspan=2 align="right" valign="bottom"><a href="https://www.youtube.com/"><input type="button" name="Food" value="Food"></a></td>
+            <td rowspan=2 colspan =2 align="left" valign = "bottom"><a href="https://www.youtube.com/"><input type="button" name="Game" value="Game"></a></td>
+            <td  align="center"><a href="https://www.youtube.com/"><input type="button" name="Social life" value="Social Life"></a></td>
         </tr>
         <tr style="height:50px">
-            <td  align="center">Sleep</td>
+            <td  align="center"><a href="https://www.youtube.com/"><input type="button" name="Sleep" value="Sleep"></a></td>
         </tr>
         <tr style="height:100px">
-            <td colspan=3 align="right">Beer &gt;</td>
-            <td colspan=1 align="left">WC</td>
+            <td colspan=3 align="right"><a href="https://www.youtube.com/"><input type="button" name="Beer" value="Beer &gt;&gt;&gt;"></a></td>
+            <td colspan=1 align="left"><a href="https://www.youtube.com/"><input type="button" name="wc" value="WC"></a></td>
         </tr>
     </table>
 </body>
