--- a/html-assignment/nestedTables.html
+++ b/html-assignment/nestedTables.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <Table border=1 cellpadding =2 width = 50%> 
-        <tr>
-            <th rowspan=2> Antra </th>
+        <tr style="height:100px">
+            <td rowspan=2> <img src="asset/Antra-black.png" alt="Antra logo" style="width:100%;height:auto;"> </td>
             <th colspan=2> Software </th>
         </tr>
-        <tr>
+        <tr style="height:100px">
             <th> Developer </th>
         </tr>
     </Table>
