--- a/html-assignment/table1.html
+++ b/html-assignment/table1.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Table</title>
 </head>
 <body>
-    
+    <table cellpadding="20">
+        <tr>
+            <td align="left"><img src="asset/Antra-black.png" alt="antra logo" style="width: 100px;;height:auto;"></td>
+        </tr>
+        <tr>
+            <td align="center"><img src="asset/if_Graph-Magnifier_379472.png" alt="magnifier" style="width:90%;height:auto;"></td>
+            <td align="center"><img src="asset/if_law_iconsArtboard_1_copy_3_2393031.png" alt="artboard" style="width:100%;height:auto;"></td>
+            <td align="center"><img src="asset/if_Studio_1562691.png" alt="studio" style="width:100%;height:auto;"></td>
+        </tr>
+        <tr>
+            <th>Business Advisory Services</th>
+            <th>Technology Services</th>
+            <th>Professional Services</th>
+        </tr>
+        <tr>
+            <td align="center">
+                Our business advisory services assist our clients to align IT capabilities with their business needs to drive growth and productivity. Hence deriving a greater value from IT! We continually seek better ways of collaborating with our clients, work more cohesively to understand their business issues.
+            </td>
+            <td align="center">
+                Harness the power of emerging technologies while leveraging most out of the legacy IT. Antra offers full spectrum of technology services for business to achieve its business goals .Our differentiation starts with core fundamental elements required for your technology enablement.
+            </td>
+            <td align="center">
+                <p>
+                    Our motto is to bridge skill gap, and foster on agile technologies to support growth of various organizations! Antra’s full range of workforce solutions and service delivery models equips our clients with the right people, skills and competencies required to get IT done.
+                </p>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
